style: fixed list jumping on init

--- a/src/app/shared/scrollable-list/scrollable-list.component.scss
+++ b/src/app/shared/scrollable-list/scrollable-list.component.scss
@@ -17,6 +17,7 @@ $opac-outside: 0.3;
 
   .submenu-wrapper {
     width: 100%;
+    height: 40px;
     opacity: 0;
     transition: 750ms ease-out;
     transition-delay: 250ms;
@@ -96,7 +97,6 @@ $opac-outside: 0.3;
 
 app-scrollable-list-item {
   position: absolute;
-  transition: none;
 
   &.scroll {
     transition: 300ms ease-out;
